--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,8 +81,8 @@ nav:
 
 plugins:
   - search
-  # - git-revision-date-localized:
-
+  - git-revision-date-localized:
+      enable_creation_date: true
 extra:
   version:
     provider: mike
