Fix: Add security-events permissions to security scan jobs
- Add security-events: write permission to security-scan job
- Add security-events: write permission to cve-scan job
- Required for uploading SARIF files to GitHub Security

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,6 +131,9 @@ jobs:
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -188,6 +191,9 @@ jobs:
   cve-scan:
     name: CVE Detection
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
