Fix: Resolve remaining yamllint errors
- Fix long lines in release.yml and ci.yml by breaking them properly
- Fix workflow_dispatch truthy value issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,7 +226,8 @@ jobs:
         run: |
           go install github.com/sonatype-nexus-community/nancy@latest || true
           if command -v nancy &> /dev/null; then
-            go list -json -deps | nancy sleuth || echo "Nancy check completed with warnings"
+            go list -json -deps | nancy sleuth ||
+              echo "Nancy check completed with warnings"
           else
             echo "Nancy installation failed, skipping nancy check"
           fi
