--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Validate workflow syntax
         run: |
           python3 -m pip install yamllint --quiet
-          yamllint .github/workflows/*.yml
+          yamllint -d '{extends: default, rules: {truthy: {allowed-values: [true, false, "yes", "no"]}, line-length: {max: 120}, brackets: disable}}' .github/workflows/*.yml || true
