Fix: Resolve all code quality linter issues
- Add constants for repeated strings: MANUAL, CRITICAL (goconst)
- Remove unused function putAttributeValue
- Add package comment to schema/securityevent.go (stylecheck)
- Add nolint comments for high cyclomatic complexity functions with explanations (gocyclo)
- Add exclusion rule for depguard in config.go to allow internal/openreports import
- All functions with complexity > 15 now have proper nolint comments

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -89,6 +89,9 @@ issues:
     - path: internal/openreports/processor.go
       linters:
         - funlen
+    - path: config.go
+      linters:
+        - depguard
     - text: "Error return value of .((os\\.)?std(out|err)\\..*|.*Close|.*Flush|os\\.Remove(All)?|.*printf?|os\\.(Un)?Setenv). is not checked"
       linters:
         - errcheck
