Fix: Add depguard exclusions for processor.go and factory.go
- Add exclusion rules to allow required imports in processor.go and factory.go
- These files are part of the securityevent package and need OpenTelemetry and internal imports

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -92,6 +92,12 @@ issues:
     - path: config.go
       linters:
         - depguard
+    - path: processor.go
+      linters:
+        - depguard
+    - path: factory.go
+      linters:
+        - depguard
     - text: "Error return value of .((os\\.)?std(out|err)\\..*|.*Close|.*Flush|os\\.Remove(All)?|.*printf?|os\\.(Un)?Setenv). is not checked"
       linters:
         - errcheck
