Fix: Exclude all test files from depguard checks
- Add depguard to the exclusion list for _test.go files
- Test files need flexible imports for testing frameworks and component test utilities

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -86,6 +86,7 @@ issues:
         - errcheck
         - dupl
         - gosec
+        - depguard
     - path: internal/openreports/processor.go
       linters:
         - funlen
